--- a/machine.html
+++ b/machine.html
@@ -79,11 +79,11 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304306-stage-data-mise-en-uvre-d-une-solution-en-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION EN MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304306-stage-data-mise-en-uvre-d-une-solution-en-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION EN MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://apply.workable.com/warungpintar/j/C05DD39936/'>Machine Learning Engineer - Warung Pintar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/warungpintar/j/C05DD39936/'>Machine Learning Engineer - Warung Pintar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Familiar in using common algorithms (SVM, Naive Bayes, Random Forest) and 
 Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
@@ -96,7 +96,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698180457-data-analyst-ii-iii-machine-learning-'>Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698180457-data-analyst-ii-iii-machine-learning-'>Expeditors Data Analyst II/III (Machine Learning) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -159,12 +159,12 @@ the center of our core mission, building state of the art technologies. You will
 reinforcement learning and transfer learning) to real world problems. Provide 
 research?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/stridehealth/c019f01c-52aa-4ac7-802d-53fed87c4044'>Stride Health - Senior Data Scientist / Machine Learning (ML) Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -287,7 +287,7 @@ ML;?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensortechnologies.recruitee.com/o/machine-learning-engineer-2'>
       Machine Learning Engineer - Tensor Technologies
     </a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
@@ -326,7 +326,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697534160-machine-learning-research-engineer'>Mobica  Machine Learning Research Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697534160-machine-learning-research-engineer'>Mobica  Machine Learning Research Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -354,7 +354,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bluerivertech/jobs/1923186'>Job Application for Computer Vision Machine Learning - Software Engineer at Blue River Technology</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bluerivertech/jobs/1923186'>Job Application for Computer Vision Machine Learning - Software Engineer at Blue River Technology</a></h5> 
 <p><span class="badge badge-light">Sunnyvale  ?  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -406,7 +406,7 @@ deploy Machine Learning models into the company's core services. You'll be?...</
 Learning ?Data Scientist. This position collaborates with analytic and data teams 
 to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/resonate/job/osClbfwk'>Resonate Careers - Software Engineer - Machine Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/resonate/job/osClbfwk'>Resonate Careers - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Reston, Virginia</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -475,7 +475,7 @@ and?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/machine-learning-researcher-bdd-10001'>Machine Learning Researcher: BDD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/machine-learning-researcher-bdd-10001'>Machine Learning Researcher: BDD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
