--- a/project-manager.html
+++ b/project-manager.html
@@ -40,16 +40,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://intellipro.applytojob.com/apply/Cf14os2YCN/MechanicalRobotics-Program-Manager-Seattle-WA'>Mechanical/Robotics Program Manager (Seattle, WA) - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cision-us/job/oMgrbfwo'>Cision Global Careers - Junior Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/atirestoration/job/oEUrbfwU'> American Technologies Inc. Careers - Project Manager of Construction Services (Superintendent)</a></h5> 
+<p><span class="badge badge-light">Phoenix, Arizona</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/Cf14os2YCN/MechanicalRobotics-Program-Manager-Seattle-WA'>Mechanical/Robotics Program Manager (Seattle, WA) - IntelliPro Group Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light">Seattle, WASeattle, WARedmond, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/trianz/job/odKobfwg'>Trianz Careers - Sr. Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston, Massachusetts  Chicago, Illinois  Manchester</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://rhconstruction.applytojob.com/apply/dr5IqBoZql/Senior-Project-Manager-Buildings'>Senior Project Manager- Buildings - R&H Construction - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://greatminds.recruitee.com/o/senior-project-manager-richmond'>
@@ -58,7 +66,7 @@
 <p><span class="badge badge-light">Richmond United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greatminds.recruitee.com/o/marketing-project-manager-richmond'>
+<h5><a href='https://greatminds.recruitee.com/o/marketing-project-manager-richmond'>
       Marketing Project Manager - Great Minds
     </a></h5> 
 <p><span class="badge badge-light">Richmond United States</span></p>
@@ -108,7 +116,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/CBREGXWbSm'>Senior Construction Project Manager - Can work remote - CBRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/CBREGXWbSm'>Senior Construction Project Manager - Can work remote - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States  United States  United States  Irvine, California United States</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -136,7 +144,7 @@
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://shijigroup.join.com/jobs/469341-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shijigroup.join.com/jobs/469341-product-program-manager-m-f'>Job @ Shiji (Berlin): Product Program Manager (m/f) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -156,11 +164,11 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/program-manager-electricity-markets-and-policy-group-2287'>Program Manager (Electricity Markets and Policy Group) - LBL Careers</a></h5> 
+<h5><a href='https://lbl.referrals.selectminds.com/jobs/program-manager-electricity-markets-and-policy-group-2287'>Program Manager (Electricity Markets and Policy Group) - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ecc/job/oGBmbfwy'>ECC Careers - Senior Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/ecc/job/oGBmbfwy'>ECC Careers - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -192,7 +200,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ayla-networks/job/o6pcbfwC'>Ayla Networks Careers - Technical Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ayla-networks/job/o6pcbfwC'>Ayla Networks Careers - Technical Project Manager</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -278,7 +286,7 @@
 <p><span class="badge badge-light">New York, NYNew York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBd9VfwC&k=Job&j=oryrbfwl&__jvst=Employee&__jvsd=sTVFrgwF&__jvsc=Twitter&bid=nQaanMwO'>DDB Careers - Digital Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBd9VfwC&k=Job&j=oryrbfwl&__jvst=Employee&__jvsd=sTVFrgwF&__jvsc=Twitter&bid=nQaanMwO'>DDB Careers - Digital Project Manager</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -288,11 +296,11 @@
 <p><span class="badge badge-light">Richmond United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/joyn/7d4e36a9-8766-4004-8ba1-cd1dbee04f1c'>Joyn GmbH - Junior Producer / Project Manager (m/f/d)</a></h5> 
+<h5><a href='https://jobs.lever.co/joyn/7d4e36a9-8766-4004-8ba1-cd1dbee04f1c'>Joyn GmbH - Junior Producer / Project Manager (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ironcladts/a98a502f-3300-4b13-8508-ec97893dfab0'>Ironclad Technology Services - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ironcladts/a98a502f-3300-4b13-8508-ec97893dfab0'>Ironclad Technology Services - Project Manager</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -366,7 +374,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NorthgatePublicServices/743999698354533-project-manager-application-hosting'>Northgate Public Services Project Manager - Application Hosting | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/NorthgatePublicServices/743999698354533-project-manager-application-hosting'>Northgate Public Services Project Manager - Application Hosting | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -424,7 +432,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bgcpartners.referrals.selectminds.com/jobs/sr-project-manager-5213'>Sr. Project Manager - Cantor Fitzgerald / BGC Partners / GFI / Newmark Knight Frank Careers</a></h5> 
+<h5><a href='https://bgcpartners.referrals.selectminds.com/jobs/sr-project-manager-5213'>Sr. Project Manager - Cantor Fitzgerald / BGC Partners / GFI / Newmark Knight Frank Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -432,7 +440,7 @@
 <p><span class="badge badge-light">Centennial, COUnited States  ?  ?  ?  ?  United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cruise/jobs/1896328?gh_jid=1896328'>Job Application for Senior Technical Program Manager - Perception ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cruise/jobs/1896328?gh_jid=1896328'>Job Application for Senior Technical Program Manager - Perception ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... I acknowledge that I have read and understand the Cruise Candidate Privacy 
 Policy and all answers provided by me within this application are true and correct
@@ -452,14 +460,6 @@ Policy and all answers provided by me within this application are true and corre
 <hr/>
 <h5><a href='https://jobs.jobvite.com/braviumconsulting/job/oG0rbfw2'>Bravium Consulting Careers - Data Integrity Project Manager</a></h5> 
 <p><span class="badge badge-light">San Antonio, Texas</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oLf4afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n39TmMwI'>ServiceNow Careers - Customer Experience Program Manager</a></h5> 
-<p><span class="badge badge-light">San Francisco, California  Santa Clara, California  San Francisco Santa Clara, CA</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/blizzard/job/oJSlbfwR'>Blizzard Entertainment Careers - Program Manager Intern</a></h5> 
-<p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
